Fixed a findbugs warning
svn path=/trunk/; revision=4096


Former-commit-id: dca5c01abf5786fbd85a6995cc6c639fb1671206